force-app/main/default/objects/Antibody__c/Antibody__c.object-meta.xml
<CustomObject>
    <label>Antibody</label>
    <nameField>
        <label>Antibody Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Antibodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>