force-app/main/default/objects/Antibody__c/fields/antibodyValidApplications__c.field-meta.xml
<CustomField>
    <fullName>antibodyValidApplications__c</fullName>
    <label>Antibody Valid Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ELISA</fullName>
            </value>
            <value>
                <fullName>Immunohistochemistry</fullName>
            </value>
            <value>
                <fullName>Flow Cytometry</fullName>
            </value>
            <value>
                <fullName>Immunohistochemistry (Paraffin)</fullName>
            </value>
            <value>
                <fullName>Immunocytochemistry</fullName>
            </value>
            <value>
                <fullName>Immunoprecipitation</fullName>
            </value>
            <value>
                <fullName>Immunofluorescence</fullName>
            </value>
            <value>
                <fullName>Western Blotting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please list below)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>