force-app/main/default/objects/Antibody__c/fields/antibodyValidAppOther__c.field-meta.xml
<CustomField>
    <fullName>antibodyValidAppOther__c</fullName>
    <label>Antibody Valid Applications Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>