force-app/main/default/objects/Antibody__c/fields/bioTangDisclosure__c.field-meta.xml
<CustomField>
    <fullName>bioTangDisclosure__c</fullName>
    <label>BioTang Disclosure</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>BioTang Disclosure record type must match Antibody type.</errorMessage>
        <filterItems>
            <field>BioTang_Disclosure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>antibody</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BioTang_Disclosure__c</referenceTo>
    <relationshipLabel>Antibodies</relationshipLabel>
    <relationshipName>Antibody</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>