force-app/main/default/objects/Antibody__c/fields/isPurificationRequired__c.field-meta.xml
<CustomField>
    <fullName>isPurificationRequired__c</fullName>
    <label>Is Purification Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>